--- a/pytest.ini
+++ b/pytest.ini
@@ -69,13 +69,12 @@ log_file_format = %(asctime)s [%(levelname)8s] %(filename)s:%(lineno)d: %(messag
 log_file_date_format = %Y-%m-%d %H:%M:%S
 
 # Test collection
-collect_ignore = [
-    "setup.py",
-    "build",
-    "dist",
-    ".tox",
-    "examples",
-]
+collect_ignore = 
+    setup.py
+    build
+    dist
+    .tox
+    examples
 
 # pytest-xdist settings (for parallel testing)
 dist = loadfile
