--- a/deploy/monitoring/prometheus.yml
+++ b/deploy/monitoring/prometheus.yml
@@ -1,15 +1,17 @@
 global:
-  evaluation_interval: 15s
   scrape_interval: 15s
-rule_files: []
 scrape_configs:
-- job_name: neuromorphic-vision
+- job_name: spike-snn-event
   metrics_path: /metrics
-  scrape_interval: 5s
+  scrape_interval: 10s
   static_configs:
   - targets:
-    - neuromorphic-vision:9091
-- job_name: prometheus
-  static_configs:
-  - targets:
-    - localhost:9090
+    - spike-snn-event-service:80
+- job_name: kubernetes-pods
+  kubernetes_sd_configs:
+  - role: pod
+  relabel_configs:
+  - action: keep
+    regex: true
+    source_labels:
+    - __meta_kubernetes_pod_annotation_prometheus_io_scrape
