--- a/deploy/monitoring/prometheus.yml
+++ b/deploy/monitoring/prometheus.yml
@@ -1,17 +1,18 @@
-global:
-  scrape_interval: 15s
-scrape_configs:
-- job_name: spike-snn-event
-  metrics_path: /metrics
-  scrape_interval: 10s
-  static_configs:
-  - targets:
-    - spike-snn-event-service:80
-- job_name: kubernetes-pods
-  kubernetes_sd_configs:
-  - role: pod
-  relabel_configs:
-  - action: keep
-    regex: true
-    source_labels:
-    - __meta_kubernetes_pod_annotation_prometheus_io_scrape
+{
+  "global": {
+    "scrape_interval": "15s",
+    "evaluation_interval": "15s"
+  },
+  "scrape_configs": [
+    {
+      "job_name": "spike-snn-event",
+      "static_configs": [
+        {
+          "targets": [
+            "localhost:8080"
+          ]
+        }
+      ]
+    }
+  ]
+}
